# kql-language-tools

./: .gitignore  Cargo.toml  FUTURE.md  LICENSE  README.md  build.rs
dotnet/: .gitignore  KqlLanguageFfi.csproj  build.sh
dotnet/src/: ClassificationService.cs  CompletionService.cs  NativeExports.cs  Types.cs  ValidationService.cs
examples/: basic_validation.rs  check_availability.rs  completions.rs  schema_validation.rs  syntax_highlighting.rs
src/: classification.rs  completion.rs  error.rs  ffi.rs  lib.rs  loader.rs  schema.rs  types.rs  validator.rs
